describe signature test requirements, remove obsolete commands